Multi Threaded Dom Color