@@ -3,6 +3,8 @@ import java.time.format.DateTimeFormatter
 
 plugins {
     id 'java-library'
+    id 'idea'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
 }
 
 repositories {
@@ -11,22 +13,14 @@ repositories {
 }
 
 dependencies {
-    def commonDeps = [
-            'com.bookmap.api:api-core:7.4.0.19',
-            'com.bookmap.api:api-simplified:7.4.0.19',
-            'org.apache.commons:commons-lang3:3.11',
-            'net.java.dev.jna:jna:5.13.0', // Add the JNA library dependency here
-            'org.openjfx:javafx-base:17.0.1',
-            'org.openjfx:javafx-controls:17.0.1',
-            'org.openjfx:javafx-graphics:17.0.1',
-            'org.openjfx:javafx-fxml:17.0.1'
-    ]
     if (findProperty('is_built_from_main_bookmap_project')) {
         implementation fileTree(dir: "${main_libs}", include: ['*.jar'])
         implementation project(':Level1Api')
         implementation project(':SimplifiedApiWrapper')
     } else {
-        implementation commonDeps
+        implementation  group: 'com.bookmap.api', name: 'api-core', version: '7.4.0.19'
+        implementation  group: 'com.bookmap.api', name: 'api-simplified', version: '7.4.0.19'
+        implementation  group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     }
 }
 
@@ -34,13 +28,39 @@ jar {
     archiveFileName = "Bookmap_Add_On_${LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy_M_d_HH_mm"))}.jar"
 }
 
-// Define a task to copy the jar file
 task copyJar(type: Copy) {
-    dependsOn jar  // Make sure this task runs after the jar is built
-    from jar.archiveFile  // Source is the jar file
-    into 'C:\\Bookmap\\addons\\my_addons'  // Destination directory
+    dependsOn jar
+    from jar.archiveFile
+    into 'C:\\Bookmap\\addons\\my_addons'
 }
 
-// Make 'build' task depend on 'copyJar' so it will be executed when you run 'gradle build'
 build.dependsOn copyJar
+idea.module.downloadJavadoc = true
 
+if (idea.project) {
+    idea.project.settings.runConfigurations {
+        def addOpensOptions = ([
+                'java.base/java.lang',
+                'java.base/java.io',
+                'java.base/java.math',
+                'java.base/java.util',
+                'java.base/java.util.concurrent',
+                'java.base/java.net',
+                'java.base/java.text',
+                'java.desktop/java.awt',
+                'java.desktop/java.awt.color',
+                'java.desktop/java.awt.peer',
+                'java.desktop/com.sun.java.swing',
+                'java.prefs/java.util.prefs'
+        ] as List).collect { "--add-opens=$it=ALL-UNNAMED" }.join(' ')
+        if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
+            addOpensOptions += ' --add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED'
+        }
+
+        'BookmapJar'(org.jetbrains.gradle.ext.JarApplication) {
+            jarPath = 'C:\\Program Files\\Bookmap\\Bookmap.jar'
+            workingDirectory = 'C:\\Bookmap'
+            jvmArgs = addOpensOptions
+        }
+    }
+}
